--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -32,6 +32,22 @@ h1,h2,h3{
   border:none;
 }
 
+.navbar-default .navbar-brand{
+  color:white;
+}
+
+.navbar-default .navbar-nav > li > a{
+  color:white;
+}
+.navbar-default .navbar-brand:hover{
+  color:white;
+  opacity: 0.75;
+}
+.navbar-default .navbar-nav > li > a:hover{
+  color:white;
+  opacity: 0.75;
+  
+}
 .home-callout{
   color: white;
   margin-top: -20px;
@@ -39,3 +55,4 @@ h1,h2,h3{
   padding-bottom: 100px;
   
 }
+
