--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,9 +17,12 @@
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
 
+//Typography Styles
 h1,h2,h3{
     font-family: 'Open-Sans', sans-serif;
 }
+
+//Backgroung gradient
 .navbar, .home-callout{
   //Gradient provided by @_ighosh at uiGradients.com
   background: #5f2c82;  /* fallback for old browsers */
@@ -28,26 +31,21 @@ h1,h2,h3{
 
 }
 
+//Nav styles
 .navbar{
   border:none;
 }
 
-.navbar-default .navbar-brand{
-  color:white;
-}
-
+.navbar-default .navbar-brand,
 .navbar-default .navbar-nav > li > a{
   color:white;
+  &:hover{
+    color:white;
+    opacity: 0.75;
+  }
 }
-.navbar-default .navbar-brand:hover{
-  color:white;
-  opacity: 0.75;
-}
-.navbar-default .navbar-nav > li > a:hover{
-  color:white;
-  opacity: 0.75;
-  
-}
+
+//homepage styles
 .home-callout{
   color: white;
   margin-top: -20px;
