--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -51,6 +51,19 @@ h1,h2,h3{
     opacity: 0.75;
   }
 }
+.navbar-default .navbar-toggle .icon-bar{
+  background-color:white;
+}
+
+.navbar-default .navbar-toggle{
+  border: 2px solid white;
+  &:hover, &:focus{
+      background-color:#49a09d;
+
+  }
+}
+
+
 
 //homepage styles
 .home-callout{
