Added users index view and action details

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -30,3 +30,13 @@
   border-color: #46b8da;
 }
 
+//user index page styles
+.user-index-avatar{
+   width: 128px;
+   height: 128px;
+   border-radius: 50%;
+}
+
+.well.white-bg{
+  background-color: white;
+}
